public/assets/stylesheets/styles.css
:root {
  --primary-color: #00838e;
  --primary-color-light: #4fb3be;
  --primary-color-dark: #005661;
}

* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  background-color: #f4f4f4;
}

nav {
  background-color: var(--primary-color-dark);
}

.nav-wrapper {
  display: flex;
  align-items: center;
  max-width: 1280px;
  width: 90%;
  margin: auto;
}

.branding {
  display: inline-flex;
  align-items: flex-start;
  height: 40px;
}

.logo {
  max-width: 40px;
  margin-right: 16px;
}

.branding-copy {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  line-height: 1;
}

.copy-name {
  font-size: 20px;
  letter-spacing: 1px;
}

.copy-title {
  font-size: 12px;
}

main {
  flex: 1 0 auto;
}

.hero-overlay {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  z-index: 10;
  background: rgba(0,0,0,0.75);
}

.overlay-title {
  padding: 0 16px;
  color: #ffffff;
  color: rgba(255,255,255, 0.75);
  text-align: center;
}

.api-results {
  text-align: center;
}

.api-results-loader {
  display: none;
  margin: 1rem auto;
}

.api-results-error {
  color: #dd6973;
}

.api-results-error .error-icon {
  position: relative;
  top: .25rem;
  margin: 0 .5rem;
}

.tool-logo {
  height: 75px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 16px;
}

.tool-logo img {
  max-width: 200px;
  max-height: 75px;
}

.api-tools {
  margin: 20px auto;
  text-align: center;
}

.api-tools img {
  width: 200px;
}

footer {
  display: flex;
  align-items: flex-start;
  padding: 60px 16px;
  background: #212121;
}

footer .branding {
  display: inline-flex;
  align-items: center;
  flex-direction: row;
  font-size: 12px;
  color: #ffffff;
  text-decoration: none;
  opacity: 0.8;
  transition: opacity .35s ease-in-out;
}

footer .branding:hover {
  opacity: 1;
}

footer .logo {
  width: 28px;
  height: 28px;
  margin-right: 5px;
}

/* MATERIALIZE CSS OVERRIDES */
pre[class*=language-] {
    max-height: 50rem;
    overflow-y: auto;
}

.tabs {
  background-color: var(--primary-color-light);
}

.tabs .tab a {
color: rgba(255, 255, 255, 0.7);
}

.tabs .tab a:hover,
.tabs .tab a.active {
    color: #ffffff;
}

.tabs .indicator {
  background-color: var(--primary-color-dark);
}

